Dynamically add work, changed font

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -36,6 +36,7 @@
 
 .nav-item {
     color: #999999;
+    font-weight: 700;
     font-size: .9rem;
     margin-right: 1.3rem;
     text-decoration: none;
