--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,147 +1,5 @@
-// .footer {
-//     bottom: 0;
-//     left: 0;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     margin-top: 3rem;
-//     background-color: #121212;
-//     color: rgba($color: #ffffff, $alpha: 0.75);
-    
-//     p {
-//         margin: 10px;
-//     }
-
-//     a {
-//         padding: 10px;
-//         text-decoration: none;
-//         color: #1d21ff;
-//         transition: 0.2s ease-in-out;
-//     }
-    
-//     a:hover {
-//         color: #fff;
-//         text-shadow: 0px 0px 4px #1d21ff, 0px 0px 7px #1d21ff, 0px 0px 10px #1d21ff, 0px 0px 15px #1d21ff;
-//     }
-// }
-
-// .rows {
-//     display: flex;
-//     width: 100%;
-//     justify-content: space-around;
-//     padding: 30px 10px 40px;
-// }
-
-// .blog {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-around;
-//     height: 15vw;
-//     flex-wrap: wrap;
-//     width: 65vw;
-//     border-right: 0.5px solid rgba($color: #ffffff, $alpha: 0.75);
-
-//     h3 {
-//         text-align: center;
-//         width: 100%;
-//     }
-//     .blogList {
-//         width: 100%;
-//         height: 15vw;
-//         display: flex;
-//         flex-direction: column;
-//         align-items: flex-start;
-//         flex-wrap: wrap;
-//     }
-// }
-
-// .links {
-//     display: flex;
-//     flex-direction: column;
-//     height: 15vw;
-    
-//     span {
-//         align-self: center !important;
-//     }
-// }
-
-// img {
-//     width: 20px;
-//     height: 20px;
-// }
-
-// .nav-item {
-//     color: #999999;
-//     font-size: .9rem;
-//     margin-right: 1.3rem;
-//     text-decoration: none;
-// }
-
-// .active-nav-item {
-//     color: #fff;
-// }
-
-// @media (max-width: 1025px) {
-//     .blog {
-//         height: 20vw;
-
-//         .blogList {
-//             height: 20vw;
-//         }
-//     }
-
-//     .links {
-//         height: 20vw;
-//     }
-// }
-
-// @media (max-width: 775px) {
-//     .projects {
-//         justify-content: center;
-//     }
-
-//     .blog {
-//         height: 25vw;
-
-//         .blogList {
-//             height: 25vw;
-//         }
-//     }
-
-//     .links {
-//         height: 25vw;
-//     }
-// }
-
-// @media (max-width: 725px) {
-//     .rows {
-//         flex-direction: column;
-//     }
-//     .blog {
-//         border: none;
-//         width: 100%;
-
-//         .blogList {
-//             align-items: flex-start;
-//         }
-//     }
-//     .links {
-//         display: none;
-//     }
-// }
-
-// @media (max-width: 551px) {
-//     .blog {
-//         height: fit-content;
-//     }
-//     .blogList {
-//         height: fit-content;
-//         flex-wrap: nowrap;
-//     }
-// }
-
 .footer {
-    font-family: 'Inconsolata', monospace !important;
+    font-family: 'Lato', sans-serif;
     bottom: 0;
     left: 0;
     padding: 10px;
@@ -159,13 +17,13 @@
         justify-self: center;
         grid-area: credit;
         color: #67d5c7;
-        text-shadow: 0px 0px 2px #67d5c7, 0px 0px 4px #67d5c7, 0px 0px 7px #67d5c7, 0px 0px 10px #67d5c7;
+        text-shadow: 0px 0px 2px #67d5c7, 0px 0px 2px #67d5c7, 0px 0px 2px #67d5c7, 0px 0px 2px #67d5c7;
     }
     a {
         color: #b14184;
         text-decoration: none;
         transition: 0.1s ease-in-out;
-        text-shadow: 0px 0px 2px #b14184, 0px 0px 4px #b14184, 0px 0px 7px #b14184, 0px 0px 10px #b14184;
+        text-shadow: 0px 0px 2px #b14184, 0px 0px 2px #b14184, 0px 0px 2px #b14184, 0px 0px 4px #b14184;
     }
     a:hover {
         color: #fff;
@@ -176,9 +34,9 @@
 
     h3 {
         font-weight: normal;
-        font-family: 'Inconsolata', monospace !important;
+        font-family: 'Lato', sans-serif;
         color: #eeccaa;
-        text-shadow: 0px 0px 2px #eeccaa, 0px 0px 4px #eeccaa, 0px 0px 7px #eeccaa, 0px 0px 10px #eeccaa;
+        text-shadow: 0px 0px 2px #eeccaa, 0px 0px 2px #eeccaa, 0px 0px 2px #eeccaa, 0px 0px 4px #eeccaa;
     }
     grid-area: blog;
     display: grid;
@@ -238,5 +96,3 @@
         }
     }
 }
-
-// @media (max-width: )
