--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,83 +1,92 @@
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
 .footer {
     font-family: 'Lato', sans-serif;
     bottom: 0;
     left: 0;
     padding: 10px;
     display: grid;
-    grid-gap: 20px 0;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: 7fr 3fr;
+    grid-template-rows: 1fr auto;
     grid-template-areas: 
-        "blog links"
+        "contact links"
         "credit links";
     background: #110d29;
     > p {
+        display: flex;
+        align-items: center;
         margin-bottom: 0;
         align-self: center;
         justify-self: center;
         grid-area: credit;
-        color: #67d5c7;
-        text-shadow: 0px 0px 2px #67d5c7, 0px 0px 2px #67d5c7, 0px 0px 2px #67d5c7, 0px 0px 2px #67d5c7;
+        color: #5c6bc0;
+
+        img {
+            display: inline;
+            margin: 0 8px;
+            width: 20px;
+            height: 20px;
+        }
     }
     a {
-        color: #b14184;
+        color: #575a89;
         text-decoration: none;
         transition: 0.1s ease-in-out;
-        text-shadow: 0px 0px 2px #b14184, 0px 0px 2px #b14184, 0px 0px 2px #b14184, 0px 0px 4px #b14184;
     }
     a:hover {
         color: #fff;
     }
 }
 
-.blog {
-
+.contact {
     h3 {
-        font-weight: normal;
+        font-weight: bold;
         font-family: 'Lato', sans-serif;
-        color: #eeccaa;
-        text-shadow: 0px 0px 2px #eeccaa, 0px 0px 2px #eeccaa, 0px 0px 2px #eeccaa, 0px 0px 4px #eeccaa;
+        color: #575a89;
     }
-    grid-area: blog;
+    grid-area: contact;
     display: grid;
     grid-template-rows: auto 1fr;
-    justify-items: center;
-
-    .blogList {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 10px;
-        text-align: justify;;
-    }
+    justify-content: stretch;
+    padding: 10px 20px;
 }
 
 .links {
     grid-area: links;
     display: grid;
+    grid-template-rows: 1fr auto;
     justify-content: center;
     align-content: space-around;
-    padding: 0 50px;
+    padding: 0;
     justify-items: center;
-    border-left: 0.2px solid dimgrey;
+
+    .logo {
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        img {
+            width: 40%;
+        }
+    }
 
     span {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 10px;
-        // justify-content: stretch;
-    }
-
-    img {
-        width: 25px;
-        height: 25px;
-        margin-bottom: 0;
+        
+        img {
+            width: 25px;
+            height: 25px;
+            margin-bottom: 0;
+        }
     }
 }
 
 @media (max-width:800px) {
     .footer {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
         grid-template-areas: 
-            "blog"
+            "contact"
             "links"
             "credit";
     }
@@ -85,14 +94,26 @@
     .links {
         border-top: 0.2px solid dimgrey;
         border-left: none;
-        padding: 20px 0 0;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr 1fr;
+        padding: 20px 0 20px;
+        grid-template-columns: 3fr 2fr;
+        grid-template-rows: 1fr !important;
         
+        .logo {
+            width: 100%;
+        }
         span {
-            grid-column: 1 / -1;
-            justify-self: stretch;
-            justify-items: center;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+        }
+    }
+}
+
+@media (max-width: 425px) {
+    .footer {
+        p {
+            display: block;
+            text-align: center;
+            height: 50px;
         }
     }
 }
