--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -40,6 +40,8 @@
 }
 
 .project {
+  display: grid;
+  align-content: flex-start;
   font-family: 'Inconsolata', monospace !important;
   padding: 2px 10px;
   box-shadow: rgba(0, 0, 0, 0.11) 0px 1px 6px 0px;
@@ -62,7 +64,7 @@
     position: relative;
     top: 2px;
     left: 2px;
-    margin: 0 auto;
+    margin: 0;
 
     :first-child {
       background-color: #FF605C;
@@ -116,6 +118,18 @@
   .description {
     color: #eeccaa;
     font-size: 16px;
+    list-style-type: "- ";
+    margin: 0 0 0 15px;
+
+    li {
+      margin: 0;
+    }
+  }
+  .end {
+    color: #67d5c7;
+    font-weight: 100;
+    font-family: 'Inconsolata', monospace !important;
+    margin: 0;
   }
 }
 
