--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -10,7 +10,7 @@
     grid-template-areas: 
         "contact links"
         "credit links";
-    background: #110d29;
+    background: #000f;
     > p {
         display: flex;
         align-items: center;
@@ -18,7 +18,7 @@
         align-self: center;
         justify-self: center;
         grid-area: credit;
-        color: #5c6bc0;
+        color: #9c9ca1;
 
         img {
             display: inline;
@@ -37,11 +37,21 @@
     }
 }
 
+.background {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-image: #fff;
+}
+
 .contact {
     h3 {
         font-weight: bold;
         font-family: 'Lato', sans-serif;
-        color: #575a89;
+        color: #9c9ca1;
     }
     grid-area: contact;
     display: grid;
