--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -44,8 +44,8 @@
   align-content: flex-start;
   font-family: 'Inconsolata', monospace !important;
   padding: 2px 10px;
-  box-shadow: rgba(0, 0, 0, 0.11) 0px 1px 6px 0px;
-  background-color: rgb(17, 13, 41);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
+  background-color: #04030a;
   border-radius: 3px;
   transition: 0.2s ease-in-out;
   .heading {
