--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -6,13 +6,11 @@
     padding: 10px;
     display: grid;
     width: 100vw;
-    grid-template-columns: 7fr 3fr;
-    grid-template-rows: 1fr auto;
+    grid-template-columns: 1fr;
     grid-template-areas: 
-        "contact links"
-        "credit links";
-    background: #000;
-    > p {
+        "credit";
+    background: rgba(0,0,0,0.4);
+    > h6 {
         display: flex;
         align-items: center;
         margin-bottom: 0;
@@ -28,108 +26,5 @@
             height: 20px;
         }
     }
-    a {
-        color: #575a89;
-        text-decoration: none;
-        transition: 0.1s ease-in-out;
-    }
-    a:hover {
-        color: #fff;
-    }
-}
 
-.background {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-image: #fff;
-}
-
-.contact {
-    h3 {
-        font-weight: bold;
-        font-family: 'Lato', sans-serif;
-        color: #9c9ca1;
-    }
-    grid-area: contact;
-    display: grid;
-    grid-template-rows: auto 1fr;
-    justify-content: stretch;
-    padding: 10px 20px;
-}
-
-.links {
-    grid-area: links;
-    display: grid;
-    grid-template-rows: 1fr auto;
-    justify-content: center;
-    align-content: space-around;
-    padding: 0;
-    justify-items: center;
-
-    .logo {
-        display: grid;
-        justify-items: center;
-        align-items: center;
-        img {
-            width: 40%;
-            margin-bottom: 0;
-        }
-    }
-
-    span {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-        
-        a {
-            height: 25px;
-        }
-
-        img {
-            width: 25px;
-            height: 25px;
-            margin-bottom: 0;
-        }
-    }
-}
-
-@media (max-width:800px) {
-    .footer {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto;
-        grid-template-areas: 
-            "contact"
-            "links"
-            "credit";
-    }
-
-    .links {
-        border-top: 0.2px solid dimgrey;
-        border-left: none;
-        padding: 20px 0 20px;
-        grid-template-columns: 3fr 2fr;
-        grid-template-rows: 1fr !important;
-        
-        .logo {
-            width: 100%;
-        }
-        span {
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
-        }
-    }
-}
-
-@media (max-width: 425px) {
-    .footer {
-        p {
-            display: block;
-            text-align: center;
-            height: 50px;
-        }
-    }
 }
