--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -17,6 +17,19 @@
     }
 }
 
+.upArrow {
+  position: fixed;
+  right: 5px;
+  bottom: 5px;
+  width: 30px;
+  height: 30px;
+  padding: 3px;
+  border: 1px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+  margin: 0;
+}
+
 .image {
     justify-self: flex-end;
     width: 30%;
