--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@ html {
     scroll-behavior: smooth;
   }
   body {
-    overflow-x: hidden;
+    overflow: auto;
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
