--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     padding: 30px;
-    border-radius: 20px;
+    border-radius: 4px;
     margin: 10px auto;
     background-image: linear-gradient(-225deg, #222f56 0%, #5753C9 48%, #6E7FF3 100%);
 }
@@ -35,7 +35,16 @@
 
 @media (max-width: 550px) {
     .details {
+        width: 90%;
         padding: 15px;
-        border-radius: 10px;
+    }
+    .image {
+        height: 200px;
+    }
+}
+
+@media (max-width: 550px) {
+    .details {
+        padding: 8px;
     }
 }
