--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -27,3 +27,15 @@
     }
 
 }
+
+@media (max-width: 350px) {
+    .footer h6 {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 300px) {
+    .footer h6 {
+        font-size: 9px;
+    }
+}
