--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,9 +6,10 @@ html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   body {
-    overflow: auto;
+    overflow-x: hidden;
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
