--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -1,17 +1,18 @@
 .details {
     display: grid;
-    width: 75%;
+    width: 70%;
+    height: 70vh;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     padding: 30px;
     border-radius: 4px;
-    margin: 10px auto;
+    margin: -1rem auto;
     background-image: linear-gradient(-225deg, #222f56 0%, #5753C9 48%, #6E7FF3 100%);
 }
 
 .image {
     padding: 40px;
-    height: inherit;
+    height: 100%;
     justify-self: center;
     align-self: center;
     margin-bottom: 0;
@@ -36,15 +37,11 @@
 @media (max-width: 550px) {
     .details {
         width: 90%;
-        padding: 15px;
+        height: auto;
+        padding: 8px;
+        max-height: fit-content;
     }
     .image {
         height: 200px;
-    }
-}
-
-@media (max-width: 550px) {
-    .details {
-        padding: 8px;
     }
 }
