--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@ html {
     -webkit-text-size-adjust: 100%;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    overflow-y: auto;
   }
   body {
     overflow-x: hidden;
@@ -204,7 +205,6 @@ html {
   html {
     font: 112.5%/1.45em georgia, serif;
     box-sizing: border-box;
-    overflow-y: scroll;
   }
   * {
     box-sizing: inherit;
