Completed about page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 /* Reset provided by https://github.com/gatsbyjs/gatsby-starter-blog via MIT license */
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
 _:default:not(:root:root), html {
   letter-spacing: -1px;
 }
