--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -19,6 +19,9 @@
 }
 
 @media (max-width: 850px) {
+    .details {
+        margin-bottom: 20px;
+    }
     .image {
         padding: 15px;
     }
@@ -30,6 +33,7 @@
     }
     .image {
         width: 60% !important;
+        min-height: 100px;
         padding: 15px;
     }
 }
@@ -41,6 +45,12 @@
         padding: 8px;
     }
     .image {
-        height: 200px;
+        height: 100px;
+    }
+}
+
+@media only screen and (orientation: landscape) {
+    .details {
+        height: auto;
     }
 }
