--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -49,7 +49,7 @@
     }
 }
 
-@media only screen and (orientation: landscape) {
+@media only screen and (max-width: 900px) and (orientation: landscape) {
     .details {
         height: auto;
     }
