--- a/src/styles/blog.module.scss
+++ b/src/styles/blog.module.scss
@@ -11,7 +11,6 @@
         color: black;
     }
     code {
-        padding-left: 10px;
         margin-right: 5px;
     }
 }
@@ -27,13 +26,13 @@
 }
 
 @media (max-width: 600px) {
-    .layout {
+    .layout, .heading, .date {
         width: 85%;
     }
 }
 
 @media (max-width: 400px) {
-    .layout {
+    .layout, .heading, .date {
         width: 90%;
     }
 }
