--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -14,6 +14,19 @@
         width: 40vw;
         color: white;
       }
+      .resumeLink {
+        border-radius: 45px;
+        padding: 10px 20px;
+        background: #2f00b2;
+        cursor: pointer;
+        color: white;
+        text-decoration: none;
+        transition: 0.2s ease-in-out;
+        border: 1px solid #2f00b2;
+      }
+      .resumeLink:hover {
+        border: 1px solid white;
+      }
     }
 }
 
@@ -154,6 +167,9 @@
 }
 
 @media (max-width: 650px) {
+  .introduction {
+    margin-bottom: 50px;
+  }
   .projects {
     grid-template-columns: 1fr;
   }
@@ -162,10 +178,21 @@
 @media (max-width: 525px) {
   .introduction {
     flex-direction: column;
-    
-    .line1 {
-      width: inherit !important;
-    }
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .line1 {
+        text-align: center;
+        width: inherit !important;
+      }
+
+      .resumeLink {
+        width: max-content;
+      }
+    }  
 
     .image {
       margin: 50px 0;
