--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -15,6 +15,7 @@
         color: white;
       }
       .resumeLink {
+        font-weight: 600;
         border-radius: 45px;
         padding: 10px 20px;
         background: #2f00b2;
